--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="HTML/CSS">
     <meta name="author" content="Anil">
     <title>Website -Template</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
