--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </nav>
         <section class="header-section">
             <div class="center-div">
-                <h1 class="font-weight-bold">Bienvenidos a mi Vida Online HOY</h1>
+                <h1 class="font-weight-bold">Bienvenidos a mi Vida Online</h1>
                 <p>Conoceme siguiendo mi día a día en las redes</p>
                 <div class="header-buttons">
                     <a href="#newsletterdiv">Sobre Mi</a>
