--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <div class="card-header">FACEBOOK</div>
                         <div class="card-body">
                             <li><span class="money"></span>
-                                <img src="../imagenes/292600304_472550121538143_2094812081583887976_n.jpg" alt="fotofacebook">
+                                <img src="./imagenes/292600304_472550121538143_2094812081583887976_n.jpg" alt="fotofacebook">
                             </li>
                             <li>Mariherbastyle <br> Herbalife Nutrition Miembro Independiente </li>
                             <li>¿Necesitas ayuda con tu nutrición?
@@ -208,7 +208,7 @@
                         <div class="card-header">INSTAGRAM</div>
                         <div class="card-body">
                             <li><span class="money"></span><img
-                                    src="../imagenes/241108727_208426817988007_5593269682234197329_n.jpg" alt="fotoinstagram">
+                                    src="./imagenes/241108727_208426817988007_5593269682234197329_n.jpg" alt="fotoinstagram">
                             </li>
                             <li>Mariana Velasco🦋
                             </li>
@@ -228,7 +228,7 @@
                         <div class="card-header">TIK TOK</div>
                         <div class="card-body">
                             <li><span class="money"></span>
-                                <img src="../imagenes/292600304_472550121538143_2094812081583887976_n.jpg" alt="">
+                                <img src="./imagenes/292600304_472550121538143_2094812081583887976_n.jpg" alt="">
                             </li>
                             <li>Mariherbastyle</li>
 
